--- a/TelecomX.ipynb
+++ b/TelecomX.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+A9O9VE6UdCyLQ9pZ4a8P",
+      "authorship_tag": "ABX9TyP6DikvK35K21Zp2tPKRicM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 12,
       "metadata": {
         "id": "OTJLrM6ht6RA"
       },
@@ -54,13 +54,23 @@
       "metadata": {
         "id": "-Ncvvq1D75P_"
       },
-      "execution_count": 2,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## EXTRACCION DE LOS DATOS"
+      ],
+      "metadata": {
+        "id": "pgRuL9siWN7j"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "pd.read_json(url)"
+        "df_telecom = pd.read_json(url)\n",
+        "df_telecom"
       ],
       "metadata": {
         "colab": {
@@ -68,9 +78,9 @@
           "height": 770
         },
         "id": "7jx91uNB8opF",
-        "outputId": "c8e82f8e-acd1-4760-8565-b085d36e234a"
+        "outputId": "734009e7-86e6-4110-92c5-7317428b5b3e"
       },
-      "execution_count": 3,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -132,7 +142,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ce3cebab-9f90-445b-9c7c-850e4870519c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-58ed12f4-8739-43fd-b112-8946a7505117\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -266,7 +276,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ce3cebab-9f90-445b-9c7c-850e4870519c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-58ed12f4-8739-43fd-b112-8946a7505117')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -318,12 +328,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ce3cebab-9f90-445b-9c7c-850e4870519c button.colab-df-convert');\n",
+              "        document.querySelector('#df-58ed12f4-8739-43fd-b112-8946a7505117 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ce3cebab-9f90-445b-9c7c-850e4870519c');\n",
+              "        const element = document.querySelector('#df-58ed12f4-8739-43fd-b112-8946a7505117');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -343,16 +353,362 @@
               "  </div>\n",
               "\n",
               "\n",
+              "  <div id=\"id_ca00a59d-d131-4fe4-99f3-83d34cfc04ae\">\n",
+              "    <style>\n",
+              "      .colab-df-generate {\n",
+              "        background-color: #E8F0FE;\n",
+              "        border: none;\n",
+              "        border-radius: 50%;\n",
+              "        cursor: pointer;\n",
+              "        display: none;\n",
+              "        fill: #1967D2;\n",
+              "        height: 32px;\n",
+              "        padding: 0 0 0 0;\n",
+              "        width: 32px;\n",
+              "      }\n",
+              "\n",
+              "      .colab-df-generate:hover {\n",
+              "        background-color: #E2EBFA;\n",
+              "        box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "        fill: #174EA6;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate {\n",
+              "        background-color: #3B4455;\n",
+              "        fill: #D2E3FC;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate:hover {\n",
+              "        background-color: #434B5C;\n",
+              "        box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "        filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "        fill: #FFFFFF;\n",
+              "      }\n",
+              "    </style>\n",
+              "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('df_telecom')\"\n",
+              "            title=\"Generate code using this dataframe.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M7,19H8.4L18.45,9,17,7.55,7,17.6ZM5,21V16.75L18.45,3.32a2,2,0,0,1,2.83,0l1.4,1.43a1.91,1.91,0,0,1,.58,1.4,1.91,1.91,0,0,1-.58,1.4L9.25,21ZM18.45,9,17,7.55Zm-12,3A5.31,5.31,0,0,0,4.9,8.1,5.31,5.31,0,0,0,1,6.5,5.31,5.31,0,0,0,4.9,4.9,5.31,5.31,0,0,0,6.5,1,5.31,5.31,0,0,0,8.1,4.9,5.31,5.31,0,0,0,12,6.5,5.46,5.46,0,0,0,6.5,12Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "    <script>\n",
+              "      (() => {\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#id_ca00a59d-d131-4fe4-99f3-83d34cfc04ae button.colab-df-generate');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      buttonEl.onclick = () => {\n",
+              "        google.colab.notebook.generateWithVariable('df_telecom');\n",
+              "      }\n",
+              "      })();\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
               "    </div>\n",
               "  </div>\n"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"pd\",\n  \"rows\": 7267,\n  \"fields\": [\n    {\n      \"column\": \"customerID\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 7267,\n        \"samples\": [\n          \"2038-OEQZH\",\n          \"6322-HRPFA\",\n          \"3969-JQABI\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Churn\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 3,\n        \"samples\": [\n          \"No\",\n          \"Yes\",\n          \"\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"customer\",\n      \"properties\": {\n        \"dtype\": \"object\",\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"phone\",\n      \"properties\": {\n        \"dtype\": \"object\",\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"internet\",\n      \"properties\": {\n        \"dtype\": \"object\",\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"account\",\n      \"properties\": {\n        \"dtype\": \"object\",\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "variable_name": "df_telecom",
+              "summary": "{\n  \"name\": \"df_telecom\",\n  \"rows\": 7267,\n  \"fields\": [\n    {\n      \"column\": \"customerID\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 7267,\n        \"samples\": [\n          \"2038-OEQZH\",\n          \"6322-HRPFA\",\n          \"3969-JQABI\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Churn\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 3,\n        \"samples\": [\n          \"No\",\n          \"Yes\",\n          \"\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"customer\",\n      \"properties\": {\n        \"dtype\": \"object\",\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"phone\",\n      \"properties\": {\n        \"dtype\": \"object\",\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"internet\",\n      \"properties\": {\n        \"dtype\": \"object\",\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"account\",\n      \"properties\": {\n        \"dtype\": \"object\",\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_telecom.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-HOQ_H9b-iBL",
+        "outputId": "8f9b17a9-32d4-43d0-a0aa-508e74cccbcf"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 7267 entries, 0 to 7266\n",
+            "Data columns (total 6 columns):\n",
+            " #   Column      Non-Null Count  Dtype \n",
+            "---  ------      --------------  ----- \n",
+            " 0   customerID  7267 non-null   object\n",
+            " 1   Churn       7267 non-null   object\n",
+            " 2   customer    7267 non-null   object\n",
+            " 3   phone       7267 non-null   object\n",
+            " 4   internet    7267 non-null   object\n",
+            " 5   account     7267 non-null   object\n",
+            "dtypes: object(6)\n",
+            "memory usage: 340.8+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_telecom.dtypes"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 272
+        },
+        "id": "OQGhGgrLB1LL",
+        "outputId": "fabca2a7-62d1-485b-9583-cee64c5c0db4"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "customerID    object\n",
+              "Churn         object\n",
+              "customer      object\n",
+              "phone         object\n",
+              "internet      object\n",
+              "account       object\n",
+              "dtype: object"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>customerID</th>\n",
+              "      <td>object</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Churn</th>\n",
+              "      <td>object</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>customer</th>\n",
+              "      <td>object</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>phone</th>\n",
+              "      <td>object</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>internet</th>\n",
+              "      <td>object</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>account</th>\n",
+              "      <td>object</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> object</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##TRANSFORMACIÓN DE LOS DATOS\n"
+      ],
+      "metadata": {
+        "id": "61A0nVEWWVUp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "churn_df = df_telecom['Churn']\n",
+        "pd.unique(churn_df)\n",
+        "\n",
+        "#columna churn contiene valores en blanco, revisar en siguiente etapa"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vgt8M09IpFto",
+        "outputId": "bf27f2ee-36ed-4361-f067-59bce415885a"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['No', 'Yes', ''], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "customer_df = pd.json_normalize(df_telecom[\"customer\"])\n",
+        "\n",
+        "pd.unique(customer_df[\"gender\"])\n",
+        "pd.unique(customer_df[\"Partner\"])\n",
+        "pd.unique(customer_df[\"Dependents\"])\n",
+        "pd.unique(customer_df[\"SeniorCitizen\"])\n",
+        "pd.unique(customer_df['tenure'])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SI-_bJmZUzBg",
+        "outputId": "576e26d4-1f9f-47c2-d7aa-a270fe5970df"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 9,  4, 13,  3, 71, 63,  7, 65, 54, 72,  5, 56, 34,  1, 45, 50, 23,\n",
+              "       55, 26, 69, 11, 37, 49, 66, 67, 20, 43, 59, 12, 27,  2, 25, 29, 14,\n",
+              "       35, 64, 39, 40,  6, 30, 70, 57, 58, 16, 32, 33, 10, 21, 61, 15, 44,\n",
+              "       22, 24, 19, 47, 62, 46, 52,  8, 60, 48, 28, 41, 53, 68, 51, 31, 36,\n",
+              "       17, 18, 38, 42,  0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "phone_df = pd.json_normalize(df_telecom['phone'])\n",
+        "\n",
+        "pd.unique(phone_df['PhoneService'])\n",
+        "pd.unique(phone_df['MultipleLines'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ki-YmIg3ovud",
+        "outputId": "3e586fb5-6e16-4d1c-c968-79612955dc88"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['No', 'Yes', 'No phone service'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "internet_df = pd.json_normalize(df_telecom['internet'])\n",
+        "\n",
+        "pd.unique(internet_df['InternetService'])\n",
+        "pd.unique(internet_df['OnlineSecurity'])\n",
+        "pd.unique(internet_df['OnlineBackup'])\n",
+        "pd.unique(internet_df['DeviceProtection'])\n",
+        "pd.unique(internet_df['TechSupport'])\n",
+        "pd.unique(internet_df['StreamingTV'])\n",
+        "pd.unique(internet_df['StreamingMovies'])\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XhH3phNwsecI",
+        "outputId": "9f72988a-4670-42b9-c94a-39f892b13386"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['No', 'Yes', 'No internet service'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "account_df = pd.json_normalize(df_telecom['account'])\n",
+        "\n",
+        "pd.unique(account_df['Contract'])\n",
+        "pd.unique(account_df['PaperlessBilling'])\n",
+        "pd.unique(account_df['PaymentMethod'])\n",
+        "pd.unique(account_df['Charges.Monthly'])\n",
+        "pd.unique(account_df['Charges.Total'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YbJ71L0ysoQX",
+        "outputId": "99ff1e4f-b5fd-487e-e28d-c0cf2ebdf600"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['593.3', '542.4', '280.85', ..., '742.9', '4627.65', '3707.6'],\n",
+              "      dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
         }
       ]
     }
